<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.belichenko.a.myapplication23api.MainActivity">
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_safe"
        android:orderInCategory="100"
        android:title="@string/action_safe_data"
        app:showAsAction="never" />
     <item
        android:id="@+id/action_set_filter"
        android:orderInCategory="100"
        android:title="@string/action_set_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>