<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.LoginFragment"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/textLogin"
        style="@style/textViewStyle"
        android:layout_alignParentTop = "true"
        android:text="@string/authorization"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editLoginName"
        style="@style/textViewStyle"
        android:layout_below = "@+id/textLogin"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty_string"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/editLoginPass"
        style="@style/textViewStyle"
        android:layout_below = "@+id/editLoginName"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="4dp"
        android:hint="@string/text_pass" />

    <TextView
        android:id="@+id/textLoginLink"
        style="@style/textViewStyle"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:layout_below = "@+id/editLoginPass"
        android:text="@string/loginLink"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/textRegister"
        style="@style/textViewStyle"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:layout_alignParentBottom = "true"
        android:text="@string/link_registre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="12dp" />

</RelativeLayout>
