<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context="layout.RegistreFragment"
    android:orientation="vertical">


    <TextView
        style="@style/textViewStyle"
        android:id="@+id/text_registre_header"
        android:text="@string/registre_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_width="wrap_content" />

    <EditText
        style="@style/textViewStyle"
        android:id="@+id/editName"
        android:ems="12"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:layout_below="@+id/text_registre_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_margin" />

    <EditText
        style="@style/textViewStyle"
        android:id="@+id/edit_pass"
        android:ems="12"
        android:inputType="textPassword"
        android:hint="@string/text_pass"
        android:layout_below="@+id/editName"
        android:layout_marginBottom="@dimen/activity_margin" />

    <EditText
        style="@style/textViewStyle"
        android:id="@+id/edit_rewrite_pass"
        android:ems="12"
        android:inputType="textPassword"
        android:hint="@string/text_rewrite_pass"
        android:gravity="center_horizontal"
        android:layout_below="@+id/edit_pass"
        android:layout_marginBottom="@dimen/activity_margin" />

    <TextView
        style="@style/textViewStyle"
        android:id="@+id/text_save"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/save_btn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/edit_rewrite_pass"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content" />

</RelativeLayout>
