<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="org.belichenko.a.login.LoginActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/authorization"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editLoginName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty_string" />

    <EditText
        android:id="@+id/editLoginPass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:onClick="onLoginLinkClick"
        android:text="@string/loginLink"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5"
        android:background="@mipmap/main_icon"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:autoLink="all"
        android:autoText="false"
        android:clickable="true"
        android:contentDescription="@string/link_registre"
        android:enabled="true"
        android:focusable="true"
        android:gravity="bottom"
        android:linksClickable="false"
        android:onClick="onRegistreLinkClick"
        android:text="@string/link_registre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorLink="@android:color/white"
        android:textIsSelectable="false" />
</LinearLayout>
